# talk-to-my-data-agent-sqlserver

./: .env.template  .gitignore  CHANGELOG.md  Makefile  README.md  SQL_SERVER_INTEGRATION.md  requirements.txt
.github/workflows/: app_backend-test.yml  app_frontend-vitest.yml  dockerfile-lint.yml  python-deps-install-test.yml  python-static-checks.yml  shellcheck.yml  yaml-format.yml
app_backend/: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  start-app.sh
app_backend/app/: __init__.py  main.py
app_backend/static/: index.html
app_backend/static/assets/: Chats-DP8efIVT.js  Chats-DqZjHwP9.js  Chats-M0pjWu7k.js  Chats-pAXPCVuU.js  Data-BCZwruYN.js  Data-Bpsku5AZ.js  Data-CVZKyIMj.js  Data-fSM05BMy.js  ResponseMessage-Bep_dtAL.js  ResponseMessage-Bi-Z-iLQ.js  ResponseMessage-CWOV94tO.js  ResponseMessage-Ca3C-nbq.js  index-BfAuyFAn.css  index-CMsw26cy.css  index-DoYJSZW8.css  index-Dr41AYLo.js  index-FhmhbUKT.js  index-PAu_-MDW.js  index-U5LMoOKn.css  index-jHo7rD02.js  loading-CEFhaZVm.js  loading-CK9GbiUV.js  loading-CWQSILwp.js  loading-qniM0Q3I.js  tabs-3OT-8Yc1.js  tabs-CZ0WIow0.js  tabs-CtbE-zl1.js  tabs-DXqZvLd5.js
app_backend/tests/: test_main.py
app_frontend/: .prettierrc.json  README.md  Taskfile.yaml  i18next-parser.config.js  index.html  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
app_frontend/src/: App.css  App.tsx  global.d.ts  index.css  jest-dom.d.ts  main.tsx
app_frontend/src/api/: apiClient.ts
app_frontend/src/api/chat-messages/: api-requests.ts  hooks.ts  index.ts  keys.ts  mocks.ts  selectors.ts  types.ts  utils.ts
app_frontend/src/api/cleansed-datasets/: api-requests.ts  hooks.ts  keys.ts
app_frontend/src/api/database/: api-requests.ts  hooks.ts  keys.ts
app_frontend/src/api/datasets/: api-requests.ts  hooks.ts  keys.ts
app_frontend/src/api/dictionaries/: api-requests.ts  hooks.ts  index.ts  keys.ts  selectors.tsx  types.ts
app_frontend/src/api/user/: api-requests.ts  hooks.ts
app_frontend/src/components/: AddDataModal.tsx  DataSourceSelector.tsx  DataSourceToggle.tsx  LanguageSwitcher.tsx  NewChatModal.tsx  RenameChatModal.tsx  SettingsModal.tsx  Sidebar.tsx  WelcomeModal.tsx
app_frontend/src/components/chat/: AnalystDatasetTable.tsx  Avatars.tsx  CodeTabContent.tsx  CollapsiblePanel.tsx  ErrorPanel.tsx  HeaderSection.tsx  InfoText.tsx  InitialPrompt.tsx  InsightsTabContent.tsx  Loading.tsx  LoadingIndicator.tsx  MarkdownContent.css  MarkdownContent.tsx  MessageContainer.tsx  MessageHeader.tsx  PlotPanel.css  PlotPanel.tsx  ResponseMessage.tsx  ResponseTabs.tsx  SuggestedPrompt.tsx  SuggestedQuestionsSection.tsx  SummaryTabContent.tsx  UserMessage.tsx  UserPrompt.tsx  constants.ts  utils.ts
app_frontend/src/components/data/: CleansedDataTable.tsx  ClearDatasetsButton.tsx  DataViewTabs.tsx  DatasetCardDescriptionPanel.tsx  DictionaryTable.tsx  SearchControl.tsx  index.ts
app_frontend/src/components/ui/: badge.tsx  button.tsx  command.tsx  dialog.tsx  input.tsx  label.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  switch.tsx  table.tsx  tabs.tsx  toggle-group.tsx  toggle.tsx
app_frontend/src/components/ui-custom/: confirm-dialog.tsx  file-uploader.tsx  loading.tsx  multi-select.tsx  prompt-input.tsx  sidebar-menu.tsx  truncated-text.tsx
app_frontend/src/constants/: dataSources.ts
app_frontend/src/i18n/: index.ts
app_frontend/src/i18n/locales/: es_419.json  fr.json  ja.json  ko.json  pt_BR.json
app_frontend/src/lib/: utils.ts
app_frontend/src/pages/: Chats.tsx  Data.tsx  Layout.tsx  index.tsx  routes.ts
app_frontend/src/state/: AppStateProvider.tsx  constants.ts  hooks.ts  index.ts  reducer.ts  storage.ts  types.ts
app_frontend/tests/: setupTests.ts  test-utils.tsx
app_frontend/tests/__mocks__/: handlers.ts
app_frontend/tests/__mocks__/handlers/: app.ts
app_frontend/tests/components/: LoadingIndicator.test.tsx  MessageContainer.test.tsx  NewChatModal.test.tsx  button.test.tsx  input.test.tsx  prompt-input.test.tsx
app_frontend/tests/state/: storage.test.ts
frontend/: 01_connect_and_explore.py  02_chat_with_data.py  app_settings.py  datarobot_connect.py  helpers.py  requirements.txt
infra/: feature_flag_requirements.yaml  feature_flag_requirements_on_prem.yaml  settings_app_infra.py  settings_database.py
infra/components/: dr_credential.py
utils/: analyst_db.py  api.py  credentials.py  data_cleansing_helpers.py  database_helpers.py  database_helpers_pytds.py  datarobot_client.py  persistent_storage.py  prompts.py  rest_api.py  schema.py
